# LetsFG

./: .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECTOR_STATUS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SKILL.md  context7.json  index.html  mcp-config.json  mkdocs.yml  openapi.yaml  server.json  site_index.html  sitemap.xml  smithery.yaml
sdk/python/: LICENSE  README.md  _jetstar_checkout_validate.py  google_checkout_live_sweep.py  google_checkout_live_sweep_japan_longhaul.json  google_checkout_live_sweep_longhaul_london_us.json  google_checkout_live_sweep_results.json  google_checkout_live_sweep_results_v2.json  pyproject.toml
sdk/python/boostedtravel/: CONNECTOR_STATUS.md  __init__.py  __main__.py  cli.py  client.py  local.py
sdk/python/boostedtravel/connectors/: __init__.py  airarabia.py  airline_routes.py  cebupacific.py  easyjet.py  engine.py  flynas.py  jet2.py  lionair.py  luckyair.py  nineair.py  porter.py  scoot.py  spirit.py  spring.py  sunexpress.py  transavia.py  volaris.py  volotea.py  wizzair.py
sdk/python/boostedtravel/models/: __init__.py
sdk/python/examples/: quickstart.py  sandbox_quickstart.py
sdk/python/letsfg/: CONNECTOR_STATUS.md  __init__.py  cli.py  client.py  config.py  local.py  models.py  system_info.py
sdk/python/letsfg/connectors/: __init__.py  aegean.py  aerlingus.py  agoda.py  airarabia.py  airasia.py  airasiax.py  airbaltic.py  airbusan.py  (+191 more)
sdk/python/tests/: __init__.py  test_airindia_ota_boundary.py  test_ancillary_connector_parsing.py  test_booking_holdings_booking_urls.py  test_checkout_engine_configs.py  test_connector_parsing.py  test_country_filter_completeness.py  test_currency_rates.py  test_emirates_connector.py  test_flight_duration_backfill.py  test_goibibo_feasibility.py  test_india_direct_sources.py  test_india_ota_sources.py  test_india_user_surfaces.py  test_public_offer_masking.py  test_qunar_connector.py  test_regional_cross_area_validation.py  test_regional_india_sources.py  test_skyscanner_connector.py  test_source_country_filter.py  test_source_selection_observability.py  test_starlink_flights.py  test_telemetry_enrichment.py  test_tripcom_connector.py  test_vueling_connector.py
(+484 files in other folders)
