[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letsfg"
version = "2026.5.79"
description = "Flight search & booking for AI agents. Server-side engine covers hundreds of airlines. Free search via Bearer token or prepaid Developer API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LetsFG"},
]
keywords = [
    "flights", "travel", "booking", "agent", "ai", "cli",
    "autonomous", "mcp", "openai", "airline", "ndc",
    "low-cost", "flight-search", "pfs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "airportsdata>=20240101",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0,<8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
letsfg = "letsfg.cli:main"

[project.urls]
Homepage = "https://letsfg.co"
Documentation = "https://letsfg.co/developers/api/docs"
Repository = "https://github.com/LetsFG/LetsFG"
Issues = "https://github.com/LetsFG/LetsFG/issues"
"API Reference" = "https://letsfg.co/developers/api/openapi.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: test performs real network calls. Excluded from the deterministic Tier-1 gate (`pytest -m \"not live\"`); run nightly / on demand.",
]

[tool.hatch.build.targets.wheel]
packages = ["letsfg"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/_*",
    "/.test_*",
    "/_test_*",
    "*.png",
    "*.json",
    "*.pma",
    "*.db",
    "*.db-journal",
    ".test_ita_profile/",
    "__pycache__/",
    ".pytest_cache/",
    "dist/",
    "build/",
    "*.egg-info/",
]
